--- a/modules/ytp-assets-common/src/less/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan.less
@@ -1,4 +1,3 @@
-
 @import "upstream_ckan/ytp_ckan_bootstrap";
 @import "variables.less";
 
@@ -157,34 +156,6 @@ section.module {
         right: 0;
         top: 0;
     }
-}
-
-@media(max-width: @screen-md-min) {
-  [role=main] .primary {
-    float: right;
-    width: 100%;
-  }
-
-  [role=main] .secondary {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  section.module {
-    margin: 20px 0;
-  }
-
-  h2.module-heading {
-    margin: 0;
-  }
-
-  .panel-heading {
-    padding: 0 15px;
-  }
-
-  .panel-body {
-    padding: 0;
-  }
 }
 
 .secondary h2.module-heading {
