--- a/modules/ytp-assets-common/src/less/common.less
+++ b/modules/ytp-assets-common/src/less/common.less
@@ -87,6 +87,7 @@ a {
 
 .toolbar {
   position: relative;
+  margin-bottom: 14px;
 
   &.drupal-crumbs {
     padding-left: 35px;
