--- a/modules/ytp-assets-common/src/less/content.less
+++ b/modules/ytp-assets-common/src/less/content.less
@@ -204,7 +204,7 @@ h4 {
   margin-top: 10px;
   .region-header {
     margin-bottom: 2px;
-    padding-bottom: 16px;
+    padding-bottom: 10px;
   }
 }
 .page-header {
@@ -215,19 +215,20 @@ h4 {
 .region-sidebar-second {
   section {
     background-color: @background-hilight;
-    padding: 10px;
+    padding: 18px;
     margin: 10px 0;
     border-radius: 5px;
     .views-field-title {
-      margin-bottom: 15px;
+      margin-bottom: 4px;
       .field-content {
-        font-size: 16px;
-
+        color: rgb(51, 51, 51);
+        font-size: 18px;
+        font-weight: 400;
       }
     }
   }
   .tutorial-register {
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 10px;
     font-size: 20px;
     text-align: center;
@@ -247,6 +248,10 @@ h4 {
       content: " >"
     }
   }
+}
+
+.region-content {
+  margin-top: 21px;
 }
 
 .control-full.error-block {
