--- a/modules/ytp-assets-common/src/less/navbars.less
+++ b/modules/ytp-assets-common/src/less/navbars.less
@@ -170,6 +170,7 @@
   color: @navbar-search-color;
   padding: 2px;
   height: 54px;
+  margin-top: 10px;
 
   form {
     margin: 0;
